# EasyClaude

./: .gitignore  CLAUDE.md  LICENSE  README.md  easyclaude.spec  easyclaude_linux.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-linux.yml
app/: __init__.py  autostart.py  autostart_linux.py  config.py  gui.py  gui.py.bak  hotkey.py  launcher.py  main.py  single_instance.py  tray.py
app/platform/: __init__.py  linux.py  macos.py  windows.py
assets/: architecture.md  create_icon.py  easyclaude-autostart.desktop  easyclaude.desktop  icon_placeholder.txt
docs/: DESKTOP_ENVIRONMENT_RESEARCH.md  LINUX_RELEASE_PLAN.md  TERMINAL_LAUNCHER_RESEARCH.md
hooks/: runtime_tkinter.py
tests/: QA_VALIDATION_REPORT.md  TEST_RESULTS.md  TEST_SUMMARY.md  __init__.py  conftest.py  qa_checklist.md  qa_findings_report.md  qa_summary.md  qa_verification_report.md  test_config.py  test_directory_history.py  test_gui.py  test_gui_integration.py  test_hotkey.py  test_hotkey_manager.py  test_integration.py  test_launcher.py  test_launcher_real.py  test_tray.py
tests/linux/: QUICK_REFERENCE.md  README.md  TESTING_STRATEGY.md  TEST_TRACKING.md  run_local_tests.sh
tests/platform/: test_linux.py  test_linux_desktop.py  test_linux_integration.py
