[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyclaude"
version = "0.2.0"
description = "Cross-platform system tray launcher for Claude Code (Windows & Linux)"
authors = [{name = "EasyClaude", email = "noreply"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pystray>=0.19.5",
    "pynput>=1.7.6",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]
linux = [
    "pycairo>=1.23.0",
    "python-xlib>=0.33",
    "pygobject>=3.44.0",
]
windows = [
    "pywin32>=305",
]

[project.scripts]
easyclaude = "app.main:main"

[tool.setuptools]
packages = ["app", "app.platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*"]
